Begin MD Sim notebook, add script for preparing sim inputs from mutants

--- a/prepare_inputs.ipynb
+++ b/prepare_inputs.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "15797e50",
+   "metadata": {},
+   "source": [
+    "# Prepare Inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faf5c735",
+   "metadata": {},
+   "source": [
+    "Objectives\n",
+    "- Download PDB of interest\n",
+    "- Generate mutant structures of protein of interest using PyRosetta"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "cd8b43c3",
