Adds MD simulation script

--- a/md_simulations.ipynb
+++ b/md_simulations.ipynb
@@ -18,40 +18,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "10c0af67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "from pdbfixer import PDBFixer\n",
-    "from openmm.app import *\n",
-    "from openmm import unit, LangevinMiddleIntegrator, Platform\n",
-    "from tqdm import trange"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "021449b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MD Parameters\n",
-    "STEP_SIZE      = 2 * unit.femtoseconds\n",
-    "RECORD_EVERY   = 5000                     # steps  (= 10 ps)\n",
-    "NVT_STEPS      = 50000                   # 100 ps\n",
-    "NPT_STEPS      = 50000                   # 100 ps\n",
-    "PROD_STEPS     = 100000                  # 200 ps\n",
-    "TEMPERATURE    = 300 * unit.kelvin\n",
-    "PRESSURE       = 1 * unit.atmosphere\n",
-    "NONBOND_CUTOFF = 1.0 * unit.nanometer\n",
-    "PADDING        = 1.0 * unit.nanometer\n",
-    "SEED           = 42"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5e838f63",
    "metadata": {},
@@ -62,6 +28,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10c0af67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from pdbfixer import PDBFixer\n",
+    "from openmm.app import PDBFile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "97959528",
    "metadata": {},
    "outputs": [],
@@ -93,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5f40d2a9",
    "metadata": {},
    "outputs": [],
@@ -122,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "9e6c5110",
    "metadata": {},
    "outputs": [],
@@ -131,12 +109,329 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "879afe84",
+   "metadata": {},
+   "source": [
+    "## Simulation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dcf3309a",
+   "execution_count": 1,
+   "id": "5a9d3d6e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pathlib import Path\n",
+    "from openmm.app import (\n",
+    "    PDBFile,\n",
+    "    Modeller,\n",
+    "    ForceField,\n",
+    "    Simulation,\n",
+    "    DCDReporter,\n",
+    "    StateDataReporter,\n",
+    "    CheckpointReporter,\n",
+    "    PME,\n",
+    "    HBonds,\n",
+    "    AllBonds,\n",
+    "    )\n",
+    "from openmm import (\n",
+    "    unit, \n",
+    "    MonteCarloBarostat, \n",
+    "    LangevinMiddleIntegrator, \n",
+    "    Platform\n",
+    "    )\n",
+    "from tqdm import trange\n",
+    "from timeit import default_timer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bc100b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MD Parameters without hbond partitioning\n",
+    "STEP_SIZE      = 4 * unit.femtoseconds\n",
+    "RECORD_EVERY   = 5000                     # steps  (= 20 ps)\n",
+    "NVT_STEPS      = 10000                    # 40 ps\n",
+    "NPT_STEPS      = 25000                    # 100 ps\n",
+    "PROD_STEPS     = 50000                    # 200 ps\n",
+    "TEMPERATURE    = 300 * unit.kelvin\n",
+    "PRESSURE       = 1 * unit.atmosphere\n",
+    "NONBOND_CUTOFF = 1.0 * unit.nanometer\n",
+    "HMASS_PART     = 1.5 * unit.amu\n",
+    "PADDING        = 1.0 * unit.nanometer\n",
+    "SEED           = 42\n",
+    "\n",
+    "# Note, I tested with and without, and it works faster without hbond partitioning for whatever reason.\n",
+    "# https://github.com/openmm/openmm/issues/3695 suggests I can up the step size to 4 fs with HBonds if I set\n",
+    "# hydrogenMass to 1.5 amu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "920ef723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_simulation(\n",
+    "        pdb_path: str | Path,\n",
+    "        output_dir: str | Path,\n",
+    "        step_size: unit.quantity.Quantity = STEP_SIZE,\n",
+    "        record_every: int = RECORD_EVERY,\n",
+    "        nvt_steps: int = NVT_STEPS,\n",
+    "        npt_steps: int = NPT_STEPS,\n",
+    "        prod_steps: int = PROD_STEPS,\n",
+    "        temperature: unit.quantity.Quantity = TEMPERATURE,\n",
+    "        pressure: unit.quantity.Quantity = PRESSURE,\n",
+    "        nonbond_cutoff: unit.quantity.Quantity = NONBOND_CUTOFF,\n",
+    "        padding: unit.quantity.Quantity = PADDING,\n",
+    "        hydrogen_mass: unit.quantity.Quantity | None = HMASS_PART,\n",
+    "        seed: int = SEED\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Run a molecular dynamics simulation for a given PDB structure using OpenMM.\n",
+    "\n",
+    "    This function performs energy minimization, NVT and NPT equilibration, and a production run.\n",
+    "    Simulation outputs—including trajectory (DCD), log, checkpoint, and final structure (PDB) files—\n",
+    "    are saved to the specified output directory.\n",
+    "\n",
+    "    All simulation parameters (step size, temperature, pressure, etc.) are assumed to be predefined\n",
+    "    as global variables/constants, but can be overridden via function arguments.\n",
+    "\n",
+    "    Args:\n",
+    "        pdb_path (str or Path): Path to the input PDB file.\n",
+    "        output_dir (str or Path): Directory to save simulation outputs.\n",
+    "        step_size (unit.Quantity, optional): Integration time step.\n",
+    "        record_every (int, optional): Steps between trajectory/log outputs.\n",
+    "        nvt_steps (int, optional): Number of NVT equilibration steps.\n",
+    "        npt_steps (int, optional): Number of NPT equilibration steps.\n",
+    "        prod_steps (int, optional): Number of production steps.\n",
+    "        temperature (unit.Quantity, optional): Simulation temperature.\n",
+    "        pressure (unit.Quantity, optional): Simulation pressure.\n",
+    "        nonbond_cutoff (unit.Quantity, optional): Nonbonded interaction cutoff.\n",
+    "        padding (unit.Quantity, optional): Padding for solvation box.\n",
+    "        hydrogen_mass (unit.Quantity or None, optional): Hydrogen mass repartitioning value.\n",
+    "        seed (int, optional): Random seed for reproducibility.\n",
+    "\n",
+    "    Returns:\n",
+    "        None. Writes simulation outputs (DCD, log, checkpoint, final PDB) to output_dir.\n",
+    "    \"\"\"\n",
+    "    pdb_path = Path(pdb_path)\n",
+    "    pdb_name = pdb_path.stem\n",
+    "    output_dir = Path(output_dir)\n",
+    "    output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    # Load structure and build system\n",
+    "    print(f'[{pdb_name}] Loading structure and building system...')\n",
+    "    pdb = PDBFile(str(pdb_path))\n",
+    "    forcefield = ForceField('amber14-all.xml', 'amber14/opc3.xml')\n",
+    "\n",
+    "    modeller = Modeller(pdb.topology, pdb.positions)\n",
+    "    modeller.deleteWater()\n",
+    "    modeller.addHydrogens(forcefield)\n",
+    "    modeller.addExtraParticles(forcefield)\n",
+    "    modeller.addSolvent(forcefield, padding=padding)\n",
+    "\n",
+    "    system = forcefield.createSystem(\n",
+    "        modeller.topology,\n",
+    "        nonbondedMethod=PME,\n",
+    "        nonbondedCutoff=nonbond_cutoff,\n",
+    "        constraints=HBonds,\n",
+    "        hydrogenMass=hydrogen_mass\n",
+    "    )\n",
+    "\n",
+    "    integrator = LangevinMiddleIntegrator(temperature, 1 / unit.picosecond, step_size)\n",
+    "    integrator.setRandomNumberSeed(seed)\n",
+    "\n",
+    "    ## Choose GPU if available\n",
+    "    avail_platforms = [Platform.getName(Platform.getPlatform(idx)) for idx in range(Platform.getNumPlatforms())]\n",
+    "    platform = Platform.getPlatformByName(\"CUDA\") if \"CUDA\" in avail_platforms else Platform.getPlatformByName(\"CPU\")\n",
+    "    #platform = Platform.getPlatformByName(\"CPU\")\n",
+    "\n",
+    "    simulation = Simulation(modeller.topology, system, integrator, platform)\n",
+    "    print(f'[{pdb_name}] Simulation running on platform: {simulation.context.getPlatform().getName()}')\n",
+    "\n",
+    "    # Set initial coordinates and minimize\n",
+    "    print(f'[{pdb_name}] Minimizing...')\n",
+    "    simulation.context.setPositions(modeller.positions)\n",
+    "    simulation.minimizeEnergy(\n",
+    "        tolerance=1.0 * unit.kilojoule_per_mole/unit.nanometer,\n",
+    "        maxIterations=5000)\n",
+    "    simulation.context.setVelocitiesToTemperature(temperature)\n",
+    "\n",
+    "    # Link up reporters\n",
+    "    print(f'[{pdb_name}] Linking up reporters...')\n",
+    "    simulation.reporters.extend(\n",
+    "        [\n",
+    "            DCDReporter(str(output_dir / f'{pdb_name}.dcd'), record_every),\n",
+    "            StateDataReporter(\n",
+    "                str(output_dir / f'{pdb_name}.log'),\n",
+    "                record_every,\n",
+    "                step=True,\n",
+    "                time=True,\n",
+    "                potentialEnergy=True,\n",
+    "                kineticEnergy=True,\n",
+    "                totalEnergy=True,\n",
+    "                temperature=True,\n",
+    "                speed=True\n",
+    "            ),\n",
+    "            CheckpointReporter(str(output_dir / f'{pdb_name}.chk'), 10000)\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    # NVT equilibration\n",
+    "    print(f'[{pdb_name}] Equilibrating...')\n",
+    "    simulation.step(nvt_steps)\n",
+    "\n",
+    "    # NPT equilibration\n",
+    "    system.addForce(MonteCarloBarostat(pressure, temperature))\n",
+    "    simulation.context.reinitialize(preserveState=True)\n",
+    "    simulation.step(npt_steps)\n",
+    "\n",
+    "    # Production\n",
+    "    print(f'[{pdb_name}] Simulate!')\n",
+    "    simulation.step(prod_steps)\n",
+    "\n",
+    "    # Save final PDB\n",
+    "    state = simulation.context.getState(getPositions=True, getVelocities=True)\n",
+    "    PDBFile.writeFile(\n",
+    "        simulation.topology, state.getPositions(), open(str(output_dir / f\"{pdb_name}_final.pdb\"), \"w\")\n",
+    "    )\n",
+    "    print(f'[{pdb_name}] ...and done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0fd84657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_dir(input_dir, output_root):\n",
+    "    \"\"\"\n",
+    "    Run molecular dynamics simulations for all PDB files in a directory.\n",
+    "\n",
+    "    For each PDB file in the input directory, creates a subdirectory in the output root\n",
+    "    and runs a simulation using predefined global simulation parameters (e.g., step size, \n",
+    "    temperature, pressure, etc.).\n",
+    "\n",
+    "    Args:\n",
+    "        input_dir (str or Path): Directory containing input PDB files.\n",
+    "        output_root (str or Path): Root directory where simulation outputs will be stored.\n",
+    "\n",
+    "    Returns:\n",
+    "        None. Writes simulation outputs to subdirectories in output_root.\n",
+    "\n",
+    "    Notes:\n",
+    "        - Assumes all simulation parameters (such as step size, temperature, etc.) are predefined \n",
+    "          as global variables/constants in the script.\n",
+    "        - Each simulation output is stored in a separate subdirectory named after the PDB file stem.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    input_dir = Path(input_dir)\n",
+    "    output_root = Path(output_root)\n",
+    "    output_root.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    pdb_files = list(input_dir.glob('*.pdb'))\n",
+    "\n",
+    "    sim_times = []\n",
+    "\n",
+    "    for pdb in pdb_files:\n",
+    "        output_dir = output_root / (pdb.stem.split(\"_\")[0])\n",
+    "        start_time = default_timer()\n",
+    "        run_simulation(pdb, output_dir)\n",
+    "        sim_time = default_timer()-start_time\n",
+    "        print(f'Time taken: {sim_time}')\n",
+    "        sim_times.append(sim_time)\n",
+    "    \n",
+    "    total_time = sum(sim_times)\n",
+    "    avg_time = total_time / len(pdb_files)\n",
+    "    print(f'Total time: {total_time}')\n",
+    "    print(f'Average time per mutant: {avg_time}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "75ae8682",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[I94P-N87C_fixed] Loading structure and building system...\n",
+      "[I94P-N87C_fixed] Simulation running on platform: CUDA\n",
+      "[I94P-N87C_fixed] Minimizing...\n",
+      "[I94P-N87C_fixed] Linking up reporters...\n",
+      "[I94P-N87C_fixed] Equilibrating...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[32m/tmp/ipykernel_243307/3158578234.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m simulate_dir(\u001b[33m'md_sim/inputs'\u001b[39m, \u001b[33m'md_sim/outputs'\u001b[39m)\n",
+      "\u001b[32m/tmp/ipykernel_243307/3843355077.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(input_dir, output_root)\u001b[39m\n\u001b[32m     29\u001b[39m \n\u001b[32m     30\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m pdb \u001b[38;5;28;01min\u001b[39;00m pdb_files:\n\u001b[32m     31\u001b[39m         output_dir = output_root / (pdb.stem.split(\u001b[33m\"_\"\u001b[39m)[\u001b[32m0\u001b[39m])\n\u001b[32m     32\u001b[39m         start_time = default_timer()\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m         run_simulation(pdb, output_dir)\n\u001b[32m     34\u001b[39m         sim_time = default_timer()-start_time\n\u001b[32m     35\u001b[39m         print(f'Time taken: {sim_time}')\n\u001b[32m     36\u001b[39m         sim_times.append(sim_time)\n",
+      "\u001b[32m/tmp/ipykernel_243307/2878274515.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(pdb_path, output_dir, step_size, record_every, nvt_steps, npt_steps, prod_steps, temperature, pressure, nonbond_cutoff, padding, hydrogen_mass, seed)\u001b[39m\n\u001b[32m    105\u001b[39m     )\n\u001b[32m    106\u001b[39m \n\u001b[32m    107\u001b[39m     \u001b[38;5;66;03m# NVT equilibration\u001b[39;00m\n\u001b[32m    108\u001b[39m     print(f'[{pdb_name}] Equilibrating...')\n\u001b[32m--> \u001b[39m\u001b[32m109\u001b[39m     simulation.step(nvt_steps)\n\u001b[32m    110\u001b[39m \n\u001b[32m    111\u001b[39m     \u001b[38;5;66;03m# NPT equilibration\u001b[39;00m\n\u001b[32m    112\u001b[39m     system.addForce(MonteCarloBarostat(pressure, temperature))\n",
+      "\u001b[32m~/miniconda3/envs/md-sim/lib/python3.13/site-packages/openmm/app/simulation.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, steps)\u001b[39m\n\u001b[32m    146\u001b[39m         \u001b[33m\"\"\"Advance the simulation by integrating a specified number of time steps.\"\"\"\u001b[39m\n\u001b[32m    147\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m int(steps) != steps:\n\u001b[32m    148\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m TypeError(f'Expected an integer for steps, got {type(steps)}')\n\u001b[32m    149\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m150\u001b[39m         self._simulate(endStep=self.currentStep+steps)\n",
+      "\u001b[32m~/miniconda3/envs/md-sim/lib/python3.13/site-packages/openmm/app/simulation.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, endStep, endTime)\u001b[39m\n\u001b[32m    225\u001b[39m                     nextSteps = steps\n\u001b[32m    226\u001b[39m                     anyReport = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    227\u001b[39m             stepsToGo = nextSteps\n\u001b[32m    228\u001b[39m             \u001b[38;5;28;01mwhile\u001b[39;00m stepsToGo > \u001b[32m10\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m229\u001b[39m                 self.integrator.step(\u001b[32m10\u001b[39m) \u001b[38;5;66;03m# Only take 10 steps at a time, to give Python more chances to respond to a control-c.\u001b[39;00m\n\u001b[32m    230\u001b[39m                 stepsToGo -= \u001b[32m10\u001b[39m\n\u001b[32m    231\u001b[39m                 \u001b[38;5;28;01mif\u001b[39;00m endTime \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mand\u001b[39;00m datetime.now() >= endTime:\n\u001b[32m    232\u001b[39m                     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "\u001b[32m~/miniconda3/envs/md-sim/lib/python3.13/site-packages/openmm/openmm.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, steps)\u001b[39m\n\u001b[32m   3984\u001b[39m         ----------\n\u001b[32m   3985\u001b[39m         steps : int\n\u001b[32m   3986\u001b[39m             the number of time steps to take\n\u001b[32m   3987\u001b[39m         \"\"\"\n\u001b[32m-> \u001b[39m\u001b[32m3988\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m _openmm.LangevinMiddleIntegrator_step(self, steps)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "simulate_dir('md_sim/inputs', 'md_sim/outputs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1238efaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Per mutant:\n",
+      "- 81 s/ns\n",
+      "- 17.61 MB\n",
+      "Per 1000 mutants:\n",
+      "- 22.50 h\n",
+      "- 17.20 GB\n",
+      "Per 10000 mutants:\n",
+      "- 225.00 h\n",
+      "- 171.96 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GPU without progress bars, 4 fs time step with hbond partitioning\n",
+    "sec_per_ns_per_mutant_gpu = 81\n",
+    "mb_per_mutant = sum([220, 198, 17.2*1024]) / 1024\n",
+    "\n",
+    "print(f'Per mutant:\\n- {sec_per_ns_per_mutant_gpu} s/ns\\n- {mb_per_mutant:.2f} MB')\n",
+    "print(f'Per 1000 mutants:\\n- {sec_per_ns_per_mutant_gpu*1000/60/60:.2f} h\\n- {mb_per_mutant*1000/1024:.2f} GB')\n",
+    "print(f'Per 10000 mutants:\\n- {sec_per_ns_per_mutant_gpu*10000/60/60:.2f} h\\n- {mb_per_mutant*10000/1024:.2f} GB')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fafeeea0",
+   "metadata": {},
+   "source": [
+    "9 ns/day with cpu"
+   ]
   }
  ],
  "metadata": {
