Add normal mode analysis script

--- a/md_simulations.ipynb
+++ b/md_simulations.ipynb
@@ -166,14 +166,13 @@
     "PADDING        = 1.0 * unit.nanometer\n",
     "SEED           = 42\n",
     "\n",
-    "# Note, I tested with and without, and it works faster without hbond partitioning for whatever reason.\n",
     "# https://github.com/openmm/openmm/issues/3695 suggests I can up the step size to 4 fs with HBonds if I set\n",
     "# hydrogenMass to 1.5 amu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "920ef723",
    "metadata": {},
    "outputs": [],
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "0fd84657",
    "metadata": {},
    "outputs": [],
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "75ae8682",
    "metadata": {},
    "outputs": [
@@ -369,23 +368,28 @@
       "[I94P-N87C_fixed] Simulation running on platform: CUDA\n",
       "[I94P-N87C_fixed] Minimizing...\n",
       "[I94P-N87C_fixed] Linking up reporters...\n",
-      "[I94P-N87C_fixed] Equilibrating...\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[32m/tmp/ipykernel_243307/3158578234.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m simulate_dir(\u001b[33m'md_sim/inputs'\u001b[39m, \u001b[33m'md_sim/outputs'\u001b[39m)\n",
-      "\u001b[32m/tmp/ipykernel_243307/3843355077.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(input_dir, output_root)\u001b[39m\n\u001b[32m     29\u001b[39m \n\u001b[32m     30\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m pdb \u001b[38;5;28;01min\u001b[39;00m pdb_files:\n\u001b[32m     31\u001b[39m         output_dir = output_root / (pdb.stem.split(\u001b[33m\"_\"\u001b[39m)[\u001b[32m0\u001b[39m])\n\u001b[32m     32\u001b[39m         start_time = default_timer()\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m         run_simulation(pdb, output_dir)\n\u001b[32m     34\u001b[39m         sim_time = default_timer()-start_time\n\u001b[32m     35\u001b[39m         print(f'Time taken: {sim_time}')\n\u001b[32m     36\u001b[39m         sim_times.append(sim_time)\n",
-      "\u001b[32m/tmp/ipykernel_243307/2878274515.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(pdb_path, output_dir, step_size, record_every, nvt_steps, npt_steps, prod_steps, temperature, pressure, nonbond_cutoff, padding, hydrogen_mass, seed)\u001b[39m\n\u001b[32m    105\u001b[39m     )\n\u001b[32m    106\u001b[39m \n\u001b[32m    107\u001b[39m     \u001b[38;5;66;03m# NVT equilibration\u001b[39;00m\n\u001b[32m    108\u001b[39m     print(f'[{pdb_name}] Equilibrating...')\n\u001b[32m--> \u001b[39m\u001b[32m109\u001b[39m     simulation.step(nvt_steps)\n\u001b[32m    110\u001b[39m \n\u001b[32m    111\u001b[39m     \u001b[38;5;66;03m# NPT equilibration\u001b[39;00m\n\u001b[32m    112\u001b[39m     system.addForce(MonteCarloBarostat(pressure, temperature))\n",
-      "\u001b[32m~/miniconda3/envs/md-sim/lib/python3.13/site-packages/openmm/app/simulation.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, steps)\u001b[39m\n\u001b[32m    146\u001b[39m         \u001b[33m\"\"\"Advance the simulation by integrating a specified number of time steps.\"\"\"\u001b[39m\n\u001b[32m    147\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m int(steps) != steps:\n\u001b[32m    148\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m TypeError(f'Expected an integer for steps, got {type(steps)}')\n\u001b[32m    149\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m150\u001b[39m         self._simulate(endStep=self.currentStep+steps)\n",
-      "\u001b[32m~/miniconda3/envs/md-sim/lib/python3.13/site-packages/openmm/app/simulation.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, endStep, endTime)\u001b[39m\n\u001b[32m    225\u001b[39m                     nextSteps = steps\n\u001b[32m    226\u001b[39m                     anyReport = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    227\u001b[39m             stepsToGo = nextSteps\n\u001b[32m    228\u001b[39m             \u001b[38;5;28;01mwhile\u001b[39;00m stepsToGo > \u001b[32m10\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m229\u001b[39m                 self.integrator.step(\u001b[32m10\u001b[39m) \u001b[38;5;66;03m# Only take 10 steps at a time, to give Python more chances to respond to a control-c.\u001b[39;00m\n\u001b[32m    230\u001b[39m                 stepsToGo -= \u001b[32m10\u001b[39m\n\u001b[32m    231\u001b[39m                 \u001b[38;5;28;01mif\u001b[39;00m endTime \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mand\u001b[39;00m datetime.now() >= endTime:\n\u001b[32m    232\u001b[39m                     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
-      "\u001b[32m~/miniconda3/envs/md-sim/lib/python3.13/site-packages/openmm/openmm.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, steps)\u001b[39m\n\u001b[32m   3984\u001b[39m         ----------\n\u001b[32m   3985\u001b[39m         steps : int\n\u001b[32m   3986\u001b[39m             the number of time steps to take\n\u001b[32m   3987\u001b[39m         \"\"\"\n\u001b[32m-> \u001b[39m\u001b[32m3988\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m _openmm.LangevinMiddleIntegrator_step(self, steps)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "[I94P-N87C_fixed] Equilibrating...\n",
+      "[I94P-N87C_fixed] Simulate!\n",
+      "[I94P-N87C_fixed] ...and done.\n",
+      "Time taken: 119.43264789300001\n",
+      "[Y116F_fixed] Loading structure and building system...\n",
+      "[Y116F_fixed] Simulation running on platform: CUDA\n",
+      "[Y116F_fixed] Minimizing...\n",
+      "[Y116F_fixed] Linking up reporters...\n",
+      "[Y116F_fixed] Equilibrating...\n",
+      "[Y116F_fixed] Simulate!\n",
+      "[Y116F_fixed] ...and done.\n",
+      "Time taken: 100.88712559299998\n",
+      "[D111A-S118R-S117R_fixed] Loading structure and building system...\n",
+      "[D111A-S118R-S117R_fixed] Simulation running on platform: CUDA\n",
+      "[D111A-S118R-S117R_fixed] Minimizing...\n",
+      "[D111A-S118R-S117R_fixed] Linking up reporters...\n",
+      "[D111A-S118R-S117R_fixed] Equilibrating...\n",
+      "[D111A-S118R-S117R_fixed] Simulate!\n",
+      "[D111A-S118R-S117R_fixed] ...and done.\n",
+      "Time taken: 132.697598509\n",
+      "Total time: 353.01737199499996\n",
+      "Average time per mutant: 117.67245733166665\n"
      ]
     }
    ],
@@ -430,8 +434,22 @@
    "id": "fafeeea0",
    "metadata": {},
    "source": [
-    "9 ns/day with cpu"
+    "18 ns/day with cpu, 650 ns/day with gpu"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd2265e",
+   "metadata": {},
+   "source": [
+    "So it would seem that I utterly lack the computational resources to preform the large-scale MD simulations that I desired. I will next look into normal mode analysis, but then I should look into course-grained simulations as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f9c258",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
