Run ESMDance binding fine-tuning experiments

--- a/esmdance_fine-tuning_on_mutant_nma.ipynb
+++ b/esmdance_fine-tuning_on_mutant_nma.ipynb
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "c66bc808",
    "metadata": {},
    "outputs": [
@@ -1249,6 +1249,7 @@
     "\n",
     "print(f\"Starting fine-tuning for {num_epochs} epochs...\")\n",
     "for epoch in range(num_epochs):\n",
+    "    print(f'\\nEpoch {epoch+1}/{num_epochs}\\n------------------------------')\n",
     "    # =======================================\n",
     "    #               TRAINING\n",
     "    # =======================================\n",
@@ -1294,7 +1295,7 @@
     "        total_train_loss += loss.item() * grad_accum_steps\n",
     "        \n",
     "    avg_train_loss = total_train_loss / len(train_loader)\n",
-    "    print(f\"\\nEpoch {epoch + 1} Training Loss: {avg_train_loss:.4f}\")\n",
+    "    print(f\"Training Loss: {avg_train_loss:.4f}\")\n",
     "\n",
     "    # =======================================\n",
     "    #              VALIDATION\n",
@@ -1337,7 +1338,7 @@
     "            total_val_loss += val_loss.item()\n",
     "            \n",
     "    avg_val_loss = total_val_loss / len(val_loader)\n",
-    "    print(f\"Epoch {epoch + 1} Validation Loss: {avg_val_loss:.4f}\")"
+    "    print(f\"Validation Loss: {avg_val_loss:.4f}\")"
    ]
   },
   {
