Revise to use h1-c structure, add parallelized fast relax for input generation

--- a/esmdance_fine-tuning_on_yeast_data.ipynb
+++ b/esmdance_fine-tuning_on_yeast_data.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "52e0b76e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "3aeef79c",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "[3960 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "b58e0e19",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "845b69af",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8ca63438",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "626816ac",
    "metadata": {},
    "outputs": [
@@ -360,20 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Freezing all parameters in the feature extractor...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Freezing all parameters in the feature extractor...\n",
       "Determining feature vector size...\n",
       "Concatenated feature vector size: 533\n",
       "Starting training of the binding head for 5 epochs...\n",
@@ -386,15 +373,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train]: 100%|██████████| 223/223 [00:28<00:00,  7.94it/s]\n",
-      "[Val]: 100%|██████████| 25/25 [00:03<00:00,  7.15it/s]\n"
+      "[Train]: 100%|██████████| 223/223 [00:19<00:00, 11.27it/s]\n",
+      "[Val]: 100%|██████████| 25/25 [00:02<00:00, 10.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.2002 | Validation Loss: 0.1825 | Spearman Correlation: 0.5288\n",
+      "Training Loss: 0.1986 | Validation Loss: 0.1919 | Spearman Correlation: 0.5796\n",
       "\n",
       "Epoch 2/5\n",
       "----------------------------\n"
@@ -404,15 +391,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train]: 100%|██████████| 223/223 [00:27<00:00,  8.11it/s]\n",
-      "[Val]: 100%|██████████| 25/25 [00:03<00:00,  7.04it/s]\n"
+      "[Train]: 100%|██████████| 223/223 [00:19<00:00, 11.26it/s]\n",
+      "[Val]: 100%|██████████| 25/25 [00:02<00:00,  9.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1828 | Validation Loss: 0.1616 | Spearman Correlation: 0.5324\n",
+      "Training Loss: 0.1803 | Validation Loss: 0.1718 | Spearman Correlation: 0.5766\n",
       "\n",
       "Epoch 3/5\n",
       "----------------------------\n"
@@ -422,15 +409,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train]: 100%|██████████| 223/223 [00:27<00:00,  8.08it/s]\n",
-      "[Val]: 100%|██████████| 25/25 [00:03<00:00,  7.20it/s]\n"
+      "[Train]: 100%|██████████| 223/223 [00:19<00:00, 11.28it/s]\n",
+      "[Val]: 100%|██████████| 25/25 [00:02<00:00, 10.14it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1684 | Validation Loss: 0.1478 | Spearman Correlation: 0.5386\n",
+      "Training Loss: 0.1651 | Validation Loss: 0.1576 | Spearman Correlation: 0.5845\n",
       "\n",
       "Epoch 4/5\n",
       "----------------------------\n"
@@ -440,15 +427,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train]: 100%|██████████| 223/223 [00:28<00:00,  7.92it/s]\n",
-      "[Val]: 100%|██████████| 25/25 [00:03<00:00,  7.41it/s]\n"
+      "[Train]: 100%|██████████| 223/223 [00:22<00:00,  9.79it/s]\n",
+      "[Val]: 100%|██████████| 25/25 [00:02<00:00,  9.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1586 | Validation Loss: 0.1383 | Spearman Correlation: 0.5450\n",
+      "Training Loss: 0.1546 | Validation Loss: 0.1478 | Spearman Correlation: 0.5947\n",
       "\n",
       "Epoch 5/5\n",
       "----------------------------\n"
@@ -458,15 +445,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Train]: 100%|██████████| 223/223 [00:32<00:00,  6.97it/s]\n",
-      "[Val]: 100%|██████████| 25/25 [00:03<00:00,  6.88it/s]"
+      "[Train]: 100%|██████████| 223/223 [00:19<00:00, 11.29it/s]\n",
+      "[Val]: 100%|██████████| 25/25 [00:02<00:00,  9.86it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1504 | Validation Loss: 0.1325 | Spearman Correlation: 0.5524\n"
+      "Training Loss: 0.1488 | Validation Loss: 0.1413 | Spearman Correlation: 0.6044\n"
      ]
     },
     {
@@ -585,8 +572,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f91c695",
+   "metadata": {},
+   "source": [
+    "## Approach 2: Fine-tuned ESMDance with Attention\n",
+    "This model loads the fine-tuned ESMDance model on the mutant NMA data with attention to integrate the pair-wise and residue-level outputs of ESMDance. It also unfreezes the final two layers of ESM2 for improved encodings."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "a817a1df",
    "metadata": {},
    "outputs": [
@@ -622,17 +618,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]:   0%|          | 0/223 [00:00<?, ?it/s]/home/oscar/miniconda3/envs/ml/lib/python3.11/site-packages/torch/nn/functional.py:5962: UserWarning: Support for mismatched key_padding_mask and attn_mask is deprecated. Use same type for both instead.\n",
+      "[Training]:   0%|          | 0/223 [00:00<?, ?it/s]Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
+      "/home/oscar/miniconda3/envs/ml/lib/python3.11/site-packages/torch/nn/functional.py:5962: UserWarning: Support for mismatched key_padding_mask and attn_mask is deprecated. Use same type for both instead.\n",
       "  warnings.warn(\n",
-      "[Training]: 100%|██████████| 223/223 [00:21<00:00, 10.50it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 16.06it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 10.64it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.95it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1889 | Validation Loss: 0.1540 | Spearman Correlation: 0.6570\n",
+      "Training Loss: 0.1863 | Validation Loss: 0.1431 | Spearman Correlation: 0.6745\n",
       "\n",
       "Epoch 2/5\n",
       "----------------------------\n"
@@ -643,14 +640,14 @@
      "output_type": "stream",
      "text": [
       "[Training]: 100%|██████████| 223/223 [00:20<00:00, 11.14it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.84it/s]\n"
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.82it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1295 | Validation Loss: 0.1061 | Spearman Correlation: 0.7089\n",
+      "Training Loss: 0.1392 | Validation Loss: 0.1621 | Spearman Correlation: 0.7070\n",
       "\n",
       "Epoch 3/5\n",
       "----------------------------\n"
@@ -660,15 +657,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:22<00:00,  9.79it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.86it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 11.00it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.71it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1151 | Validation Loss: 0.1343 | Spearman Correlation: 0.7419\n",
+      "Training Loss: 0.1107 | Validation Loss: 0.1061 | Spearman Correlation: 0.7311\n",
       "\n",
       "Epoch 4/5\n",
       "----------------------------\n"
@@ -678,15 +675,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:19<00:00, 11.21it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.77it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:23<00:00,  9.57it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.39it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1001 | Validation Loss: 0.0871 | Spearman Correlation: 0.7605\n",
+      "Training Loss: 0.1023 | Validation Loss: 0.0987 | Spearman Correlation: 0.7443\n",
       "\n",
       "Epoch 5/5\n",
       "----------------------------\n"
@@ -696,15 +693,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:19<00:00, 11.16it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.98it/s]"
+      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 10.99it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.57it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.0952 | Validation Loss: 0.0847 | Spearman Correlation: 0.7779\n"
+      "Training Loss: 0.1017 | Validation Loss: 0.0964 | Spearman Correlation: 0.7496\n"
      ]
     },
     {
@@ -909,10 +906,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f1ed73",
+   "id": "55583f2f",
    "metadata": {},
    "source": [
-    "Very interesting. This is the best model I've tried so far, but not by a lot. I wonder if this will improve with fine-tuning on Pikh1 with AVR-PikC NMA data."
+    "At least to this extent, fine-tuning did not seem to have a measurable impact."
    ]
   },
   {
